; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_vm_unix.c_suulong.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_vm_unix.c_suulong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @suulong(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %6 = call i32 (...) @current_proc()
  %7 = call i64 @IS_64BIT_PROCESS(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = bitcast i64* %5 to i8*
  %11 = load i32, i32* %4, align 4
  %12 = call i64 @copyout(i8* %10, i32 %11, i32 8)
  %13 = icmp eq i64 %12, 0
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 0, i32 -1
  store i32 %15, i32* %3, align 4
  br label %21

16:                                               ; preds = %2
  %17 = load i32, i32* %4, align 4
  %18 = load i64, i64* %5, align 8
  %19 = trunc i64 %18 to i32
  %20 = call i32 @suiword(i32 %17, i32 %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %9
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i64 @IS_64BIT_PROCESS(i32) #1

declare dso_local i32 @current_proc(...) #1

declare dso_local i64 @copyout(i8*, i32, i32) #1

declare dso_local i32 @suiword(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
